--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <h1 class="title"><i></i>Sleep Cycles!</h1>
     </header>
-    <main>
+    <main class="mainContent">
+        <h1 class="title"><i></i>Sleep Cycles!</h1>
         <section class="sleepIntro">
             <div class="wrapper">
                 <h2>How Well Do You Sleep?</h2>
@@ -20,35 +20,63 @@
             </div>
         </section>
         <section class="sleepQuestions">
-            <div class="wrapper">
-                <form action="">
+            <div class="wrapper contentForm">
+                <form class="onlyForm" action="">
                     <fieldset class="sleepTime">
-                        <p><i></i>What time do you go to bed?</p>
-                        <label for="early">8pm - 10pm</label>
-                        <input type="radio" name="bedtime" id="early" value="early" required>
-                        <label for="good">10pm - Midnight</label>
-                        <input type="radio" name="bedtime" id="good" value="good" required>
-                        <label for="late">Beyond Midnight</label>
-                        <input type="radio" name="bedtime" id="late" value="late" required>
+                        <div class="radioQuestions">
+                            <p><i></i>What time do you go to bed?</p>
+                        </div>
+                        <div class="radioChoices">
+                            <div class="sleepyTime">
+                                <label for="early">8pm - 10pm</label>
+                                <input type="radio" name="bedtime" id="early" value="early" required>
+                            </div>
+                            <div class="sleepyTime">
+                                <label for="good">10pm - Midnight</label>
+                                <input type="radio" name="bedtime" id="good" value="good" required>
+                            </div>
+                            <div class="sleepyTime">
+                                <label for="late">Beyond Midnight</label>
+                                <input type="radio" name="bedtime" id="late" value="late" required>
+                            </div>
+                        </div>
                     </fieldset>
                     <fieldset class="sleepHours">
-                        <p><i></i>How many hours of sleep do you get?</p>
-                        <label for="minimal">1 - 4 hours</label>
-                        <input type="radio" name="timeInBed" id="minimal" value="minimal" required>
-                        <label for="average">5 - 8 hours</label>
-                        <input type="radio" name="timeInBed" id="average" value="average" required>
-                        <label for="excellent">More than 8 hours</label>
-                        <input type="radio" name="timeInBed" id="excellent" value="excellent" required>
+                        <div class="radioQuestions">
+                            <p><i></i>How many hours of sleep do you get?</p>
+                        </div>
+                        <div class="radioChoices">
+                            <div class="sleepyTime">
+                                <label for="minimal">1 - 4 hours</label>
+                                <input type="radio" name="timeInBed" id="minimal" value="minimal" required>
+                            </div>
+                            <div class="sleepyTime">
+                            	<label for="average">5 - 8 hours</label>
+                            	<input type="radio" name="timeInBed" id="average" value="average" required>
+                            </div>
+                            <div class="sleepyTime">
+                                <label for="excellent">More than 8 hours</label>
+                                <input type="radio" name="timeInBed" id="excellent" value="excellent" required>
+                            </div>
+                        </div>
                     </fieldset>
                     <fieldset class="sleepConsist">
-                        <p><i></i>Are you consistent?</p>
-                        <label for="great">Yes</label>
-                        <input type="radio" name="diligence" id="great" value="great" required>
-                        <label for="fail">No</label>
-                        <input type="radio" name="diligence" id="notGreat" value="notGreat" required>
+                        <div class="radioQuestions">
+                            <p><i></i>Are you consistent?</p>
+                        </div>
+                        <div class="radioChoices">
+                            <div class="sleepyTime">
+                                <label for="great">Yes</label>
+                                <input type="radio" name="diligence" id="great" value="great" required>
+                            </div>
+                            <div class="sleepyTime">
+                                <label for="fail">No</label>
+                                <input type="radio" name="diligence" id="notGreat" value="notGreat" required>
+                            </div>
+                        </div>
                     </fieldset>
-                    <div class="submit">
-                        <input type="submit" value="What's the verdict?!">
+                    <div class="finale">
+                        <button class="submit">What's the verdict?!</button>
                     </div>
                 </form>
             </div>
@@ -62,6 +90,8 @@
             <p>Copywright © 2019</p>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
