started adding to scripts

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <header>
-    </header>
-    <main class="mainContent">
-        <h1 class="title"><i></i>Sleep Cycles!</h1>
         <section class="sleepIntro">
             <div class="wrapper">
+                <h1 class="title"><i></i>Sleep Cycles!</h1>
                 <h2>How Well Do You Sleep?</h2>
                 <p class="introText">Take the quiz and find out!</p>
                 <button class="submit">Take Quiz!</button>
             </div>
         </section>
+    </header>
+    <main class="mainContent">
         <section class="sleepQuestions">
             <div class="wrapper contentForm">
                 <form class="onlyForm" action="">
-                    <fieldset class="sleepTime">
+                    <fieldset class="time">
                         <div class="radioQuestions">
                             <p><i></i>What time do you go to bed?</p>
                         </div>
@@ -41,26 +41,26 @@
                             </div>
                         </div>
                     </fieldset>
-                    <fieldset class="sleepHours">
+                    <fieldset class="hours">
                         <div class="radioQuestions">
                             <p><i></i>How many hours of sleep do you get?</p>
                         </div>
                         <div class="radioChoices">
                             <div class="sleepyTime">
                                 <label for="minimal">1 - 4 hours</label>
-                                <input type="radio" name="timeInBed" id="minimal" value="minimal" required>
+                                <input type="radio" name="timeSlept" id="minimal" value="minimal" required>
                             </div>
                             <div class="sleepyTime">
                             	<label for="average">5 - 8 hours</label>
-                            	<input type="radio" name="timeInBed" id="average" value="average" required>
+                            	<input type="radio" name="timeSlept" id="average" value="average" required>
                             </div>
                             <div class="sleepyTime">
                                 <label for="excellent">More than 8 hours</label>
-                                <input type="radio" name="timeInBed" id="excellent" value="excellent" required>
+                                <input type="radio" name="timeSlept" id="excellent" value="excellent" required>
                             </div>
                         </div>
                     </fieldset>
-                    <fieldset class="sleepConsist">
+                    <fieldset class="consist">
                         <div class="radioQuestions">
                             <p><i></i>Are you consistent?</p>
                         </div>
